<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/server_profiles">

        <Preference
            app:key="server_profiles"
            app:title="@string/server_profiles"
            app:summary="Manage your MeTube server profiles" />

    </PreferenceCategory>
    
    <PreferenceCategory app:title="@string/torrent_sharing">

        <SwitchPreferenceCompat
            app:key="direct_torrent_sharing_enabled"
            app:title="@string/enable_direct_torrent_sharing"
            app:summary="@string/enable_direct_torrent_sharing_summary"
            app:defaultValue="true" />

        <Preference
            app:key="reset_torrent_prompts"
            app:title="@string/reset_torrent_prompts"
            app:summary="@string/reset_torrent_prompts_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance">

        <Preference
            app:key="language_selection"
            app:title="@string/language"
            app:summary="@string/language_summary" />

        <Preference
            app:key="theme_selection"
            app:title="@string/theme"
            app:summary="@string/theme_summary" />

    </PreferenceCategory>

</PreferenceScreen>